# satgalaxy-py

./: Cargo.toml  LICENSE  build.rs  main.py  pyproject.toml
src/: lib.rs
src/solver/: minisat.rs  mod.rs
